# church-warden

./: Cargo.toml  README.md  TECH_SPEC.md
docs/: ADMIN_GUIDE.md  DEPLOY.md  QR_SCANNER_GUIDE.md  USER_GUIDE.md
src/: db.rs  error.rs  gui.rs  lib.rs  main.rs  models.rs
src/modules/: admin.rs  auth.rs  backup.rs  mod.rs  reports.rs  shop.rs  warehouse.rs
tests/: admin_integration.rs  auth_integration.rs  backup_integration.rs  reports_integration.rs  shop_integration.rs  warehouse_integration.rs
