[package]
name = "church_warden"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
eframe = { version = "0.29", default-features = true }
egui_extras = "0.29"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
